@@ -4,6 +4,12 @@ A Javafx drag and drop mathematical expression editor. Clicking a section of the
 
 More details can be found in "Assignment 5.pdf"
 
+## Compiling
+ `javac --module-path "<path to>/javafx-sdk-11.0.1/lib" --add-modules javafx.controls,javafx.fxml *.java`
+ 
+## Running
+`java --module-path "<path to>/javafx-sdk-11.0.1/lib" --add-modules javafx.controls,javafx.fxml ExpressionEditor`
+
 ![image](https://user-images.githubusercontent.com/32044950/120029420-11ea6000-bfc4-11eb-8015-3f7b6c50c978.png)
 
 
